--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Food Is Life
+<!DOCTYPE html>
+<html>
+<head>
+<title>Food Is Life</title>
+</head>
+<body>
+  <h1>Food Is Life</h1>
+<img src="FoodLogo.png" alt="">
+</body>
+</html>
