--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Food Is Life</title>
+  <source src="styles.css" type="stylesheet">
 </head>
 <body>
   <h1>Food Is Life</h1>
