Added background image

--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Food Is Life</title>
-  <source src="styles.css" type="stylesheet">
-</head>
-<body>
-  <h1>Food Is Life</h1>
-<img src="" alt="">
-</body>
+  <head>
+    <source src="styles.css" type="stylesheet">
+  </head>
+  <body style="background-image:url('food-background.jpg')">
+    <h1>Food Is Life</h1>
+  </body>
 </html>
