--- a/Lunch.html
+++ b/Lunch.html
@@ -3,6 +3,7 @@
 <head>
   <title>Lunch</title>
   <source src="styles.css" type="stylesheet">
+    <body style="background-color:#F15025"></body>
 </head>
 <body>
  <h1 id="Lunch-Header">Lunch</h1>
