--- a/dinner.html
+++ b/dinner.html
@@ -3,6 +3,7 @@
 <head>
   <title>Dinner</title>
   <source src="styles.css" type="stylesheet">
+    <body style="background-color:#F15025">
 </head>
 <body>
  <h1>Dinner</h1>
