--- a/snacks.html
+++ b/snacks.html
@@ -2,6 +2,7 @@
  <head>
    <title>Snacks</title>
    <source src="styles.css" type="stylesheet">
+     <body style="background-color:#F15025">
   <h1 id="Snack-Header">Snacks</h1>
   <h2>Recipes</h2>
  </head>
