--- a/breakfast.html
+++ b/breakfast.html
@@ -3,6 +3,7 @@
 <head>
   <title>Breakfast</title>
   <source src="styles.css" type="stylesheet">
+    <body style="background-color:#F15025">
 </head>
 <body>
  <h1>Breakfast</h1>
