redid 'dinner.html'

--- a/dinner.html
+++ b/dinner.html
@@ -8,17 +8,99 @@
 <body>
  <h1>Dinner</h1>
  <h2>Recipes</h2>
-  <ul>
+ <p>
+ <ul>
+  <h3> Classic Mac and Cheese</h3>
    <li><img src="https://cdn-ap-cf.yottaa.net/57eaa34c2bb0ac1299000018/www.foodinaminute.co.nz/v~13.1b/var/fiam/storage/images/recipes/classic-mac-cheese/9545079-12-eng-US/Classic-Mac-Cheese_recipeimage.jpg?yocs=5_&yoloc=ap">
-   <li><link rel="stylesheet" type="text/css" href="https://www.foodinaminute.co.nz/Recipes/Classic-Mac-Cheese">
+    <h4> Ingredients</h4>
+    <ol>
+      <br><strong>1.</strong>225g Macaroni Elbows
+      <br><strong>2.</strong>500g jar Heinz Seriously Good Tasty Cheddar Macaroni Cheese Sauce
+      <br><strong>3.</strong>½ cup grated cheese
+    <h4>Method</h4>
+    <br><strong>1.</strong>Preheat oven to 190°C. Cook the San Remo Macaroni Elbows in lightly salted, boiling water for 8-10 minutes, until just tender. Drain. Return macaroni to saucepan.
+    <br><strong>2.</strong>Pour over Heinz Seriously Good Tasty Cheddar Macaroni Cheese Sauce and stir to mix. Spoon into an ovenproof baking dish. Sprinkle over grated cheese.
+    <br><strong>3.</strong>Bake for 15-20 minutes until macaroni cheese is hot and the top is golden.
+  </ol>
+</p>
+<p>
+  <h3> Spicy Chicken and Tomato Arrabiatta</h3>
    <li><img src="https://cdn-ap-cf.yottaa.net/57eaa34c2bb0ac1299000018/www.foodinaminute.co.nz/v~13.1b/var/fiam/storage/images/recipes/spicy-chicken-and-tomato-arrabiatta/9545129-2-eng-US/Spicy-Chicken-and-Tomato-Arrabiatta_recipeimage.jpg?yocs=5_&yoloc=ap">
-   <li><link rel="stylesheet" type="text/css" href="https://www.foodinaminute.co.nz/Recipes/Spicy-Chicken-and-Tomato-Arrabiatta">
+    <h4> Ingredients</h3>
+      <ol>
+        <br><strong>1.</strong>225g dried penne pasta
+        <br><strong>2.</strong>1 small onion, finely chopped
+        <br><strong>3.</strong>1 clove garlic, crushed
+        <br><strong>4.</strong>400g skinless, boneless chicken breasts, diced
+        <br><strong>5.</strong>525g jar Heinz Seriously Good Spicy Tomato and Chilli Pasta Sauce
+        <br><strong>6.</strong>2 Tbsp capers (optional)
+        <br><strong>7.</strong>Grated Parmesan
+        <br><strong>8.</strong>Fresh rocket or basil leaves
+      <h4>Method</h4>
+        <br><strong>1.</strong>Cook penne pasta in lightly salted, boiling water for 10-12 minutes, until pasta is tender. While pasta is cooking heat a dash of oil in a frying pan. Add onion and garlic and stir fry over a medium heat until onion softens. Add diced chicken and continue cooking until chicken is cooked.
+        <br><strong>2.</strong>Pour over Heinz Seriously Good Spicy Tomato and Chilli Pasta Sauce. Stir and heat the sauce until hot. Add capers if wished.
+        <br><strong>3.</strong>Drain cooked pasta. Return to the pan and pour over Pasta and chicken sauce. Toss to mix. Serve garnished with grated Parmesan and fresh rocket or basil leaves.
+      </ol>
+    </p>
+    <p>
+      <h3>Slow Cooked Indian Lamb and Chickpea Curry</h3>
    <li><img src="https://cdn-ap-cf.yottaa.net/57eaa34c2bb0ac1299000018/www.foodinaminute.co.nz/v~13.1b/var/fiam/storage/images/recipes/slow-cooked-indian-lamb-and-chickpea-curry/9490349-6-eng-US/Slow-Cooked-Indian-Lamb-and-Chickpea-Curry_recipeimage.jpg?yocs=5_&yoloc=ap">
-   <li><link rel="stylesheet" type="text/css" href="https://www.foodinaminute.co.nz/Recipes/Slow-Cooked-Indian-Lamb-and-Chickpea-Curry">
-   <li><img src="https://cdn-ap-cf.yottaa.net/57eaa34c2bb0ac1299000018/www.foodinaminute.co.nz/v~13.1b/var/fiam/storage/images/recipes/mexican-style-barbecued-corn/8718214-5-eng-US/Mexican-Style-Barbecued-Corn_recipeimage.jpg?yocs=5_&yoloc=ap">
-   <li><link rel="stylesheet" type="text/css" href="https://www.foodinaminute.co.nz/Recipes/Mexican-Style-Barbecued-Corn">
-   <li><img src="http://images.media-allrecipes.com/userphotos/720x405/627501.jpg">
-   <li><link rel="stylesheet" type="text/css" href="http://allrecipes.com/recipe/87648/fresh-tomato-shrimp-pasta/?internalSource=staff%20pick&referringId=17562&referringContentType=recipe%20hub">
+    <h4> Ingredients</h4>
+     <ol>
+       <br><strong>1.</strong>600g lamb leg steaks, chopped
+       <br><strong>2.</strong>1 onion, sliced
+       <br><strong>3.</strong>1-2 clove garlic, crushed
+       <br><strong>4.</strong>1 Tbsp curry powder (hot or mild)
+       <br><strong>5.</strong>2 Tbsp Wattie's Tomato Paste
+       <br><strong>6.</strong>2 x 400g cans Wattie's Indian Style Tomatoes
+       <br><strong>7.</strong>400g can Wattie's Chickpeas in Springwater, drained
+       <br><strong>8.</strong>Handful fresh coriander leaves, chopped to garnish
+    <h4> Method</h4>
+     <br><strong>1.</strong> Preheat oven to 160°C (regular).
+     <br><strong>2.</strong>Heat a dash of oil in a flame proof casserole dish. Add chopped lamb and brown over a high heat. Remove lamb from the dish and set aside. Reduce heat. Add onion and garlic and cook until onion softens. Stir in curry powder and Wattie’s Tomato Paste and cook a further minute. Return lamb to the pan.
+     <br><strong>3.</strong>Pour over Wattie’s Indian Style Tomatoes and add Wattie’s Chickpeas. Stir while bringing to the boil. Cover. Transfer to oven. Cook for 2 - 2 1/2 hours, until lamb is tender. Garnish with chopped coriander and serve with rice and your favourite green vegetables.
+   </ol>
+ </p>
+ <p>
+   <h3>Mexican-Style Barbecued Corn</h3>
+    <li><img src="https://cdn-ap-cf.yottaa.net/57eaa34c2bb0ac1299000018/www.foodinaminute.co.nz/v~13.1b/var/fiam/storage/images/recipes/mexican-style-barbecued-corn/8718214-5-eng-US/Mexican-Style-Barbecued-Corn_recipeimage.jpg?yocs=5_&yoloc=ap">
+     <h4>Ingredients</h4>
+       <ol>
+         <br><strong>1.</strong>8 cobs corn, husks on
+         <br><strong>2.</strong>½ cup Heinz Seriously Good Garlic Lovers Aioli
+         <br><strong>3.</strong>½ tsp smoked paprika
+         <br><strong>4.</strong>Pinch of cayenne pepper
+         <br><strong>5.</strong>1 Tbsp lime or lemon juice
+         <br><strong>6.</strong>Chopped coriander or parsley
+      <h4>Method</h4>
+         <br><strong>1.</strong>To prepare the corn, gently pull the husks back from the corn then remove the silks. Gently pull husks back over the corn. Place the corn cobs in a large bowl and cover with cold water. Soak for 15 minutes.
+         <br><strong>2.</strong>Cook the corn on a preheated barbecue over medium heat for 20 to 25 minutes or until the corn is tender. Turn frequently.
+         <br><strong>3.</strong>Meanwhile, prepare the dressing. Combine the Heinz Seriously Good Garlic Lovers Aioli, smoked paprika, cayenne pepper and lime or lemon juice in a small bowl.
+         <br><strong>4.</strong>Once the corn is cooked, peel back the husks. Barbecue for a few more minutes to chargrill the corn slightly. Serve drizzled with the dressing. Garnish with chopped parsley or coriander.
+       </ol>
+     </p>
+     <p>
+    <h3>Fresh Tomato Shrimp Pasta</h3>
+      <li><img src="http://images.media-allrecipes.com/userphotos/720x405/627501.jpg">
+        <h4>Ingredients</h4>
+          <ol>
+            <br><strong>1.</strong>8 ounces dry fettuccine pasta
+            <br><strong>2.</strong>3 cloves garlic
+            <br><strong>3.</strong>1/2 sweet onion, cut into wedges
+            <br><strong>4.</strong>3 tablespoons fresh oregano leaves
+            <br><strong>5.</strong>4 tablespoons olive oil
+            <br><strong>6.</strong>4 medium tomatoes, chopped
+            <br><strong>7.</strong>3 tablespoons chopped fresh basil
+            <br><strong>8.</strong>salt and pepper to taste
+            <br><strong>9.</strong>1 cup spinach leaves
+            <br><strong>10.</strong>1 pound cooked shrimp - peeled and deveined
+            <br><strong>11.</strong>8 ounces fresh mozzarella cheese, diced
+          <h4>Method</h4>
+           <br><strong>1.</strong>Bring a large pot of lightly salted water to a boil. Add the pasta, and cook for 8 minutes, or until tender. Drain.
+           <br><strong>2.</strong>In the container of a food processor, combine the garlic, onion and oregano. Pulse until finely chopped. Heat the olive oil in a large skillet over medium heat. Add the onion mixture; cook and stir until fragrant and almost golden. Mix in the tomatoes, basil, salt and pepper. Simmer for about 5 minutes while the pasta is cooking, stirring occasionally.
+           <br><strong>3.</strong>Mix in spinach until it wilts, then just before the pasta is done, stir in the shrimp. Cook until heated through. Toss with pasta in a large serving bowl, and mix in mozzarella cheese.
+        </ol>
+      </p>
   </ul>
 </body>
 </html>
