--- a/about.html
+++ b/about.html
@@ -7,4 +7,9 @@
   <body>
    <p>This website is made for those who either don't know what to cook or even those who don't know how to cook. You can browse through recipes for any meal or any time of the day, whether it be breakfast, lunch, dinner, snacks or even baked goods. There are recipes for any skill level of cooks, and better yet there are even video tutorials with basic skills, for those who are just starting out. </p>
   </body>
+  <p>
+    <h3>The Amazing Creators</h3>
+      <Strong>Name:<Strong>
+        <br><br><Strong>Name:<Strong>
+          <br><br><Strong>Name:<Strong>
 </html>
