--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Francois+One' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Kanit' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Hammersmith+One' rel='stylesheet'>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body style="background-color:#F15025">
@@ -16,126 +17,15 @@
 
     <div class="container">
       <a href="#home">Home</a>
-      <a href="#news">About</a>
-
-      <div class="dropdown">
-        <button onclick="myFunction()" class="dropbtn">Breakfast</button>
-        <div id="myDropdown" class="dropdown-content">
-          <a href="#">Link 1</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
-        </div>
-      </div>
-
-      <div class="dropdown">
-        <button onclick="myFunction()" class="dropbtn">Lunch</button>
-        <div id="myDropdown1" class="dropdown-content">
-          <a href="#">Link 4</a>
-          <a href="#">Link 5</a>
-          <a href="#">Link 6</a>
-        </div>
-      </div>
-
-      <div class="dropdown">
-        <button onclick="myFunction()" class="dropbtn">Dinner</button>
-        <div id="myDropdown2" class="dropdown-content">
-          <a href="#">Link 7</a>
-          <a href="#">Link 8</a>
-          <a href="#">Link 9</a>
-        </div>
-      </div>
-
-      <div class="dropdown">
-        <button onclick="myFunction()" class="dropbtn">Baking</button>
-        <div id="myDropdown3" class="dropdown-content">
-          <a href="#">Link 10</a>
-          <a href="#">Link 11</a>
-          <a href="#">Link 12</a>
-        </div>
-      </div>
-
-      <div class="dropdown">
-        <button onclick="myFunction()" class="dropbtn">Snacks</button>
-        <div id="myDropdown4" class="dropdown-content">
-          <a href="#">Link 13</a>
-          <a href="#">Link 14</a>
-          <a href="#">Link 15</a>
-        </div>
-      </div>
-
-      <a href="#news">Contact</a>
+      <a href="#about">About</a>
+      <a href="#breakfast">Breakfast</a>
+      <a href="#lunch">Lunch</a>
+      <a href="#dinner">Dinner</a>
+      <a href="#baking">Baking</a>
+      <a href="#snacks">Snacks</a>
+      <a href="#contact">Contact</a>
     </div>
-
-    <script>
-    function myFunction() {
-        document.getElementById("myDropdown").classList.toggle("show");
-    }
-    window.onclick = function(e) {
-      if (!e.target.matches('.dropbtn')) {
-        var myDropdown = document.getElementById("myDropdown");
-          if (myDropdown.classList.contains('show')) {
-            myDropdown.classList.remove('show');
-          }
-      }
-    }
-    </script>
-
-    <script>
-    function myFunction() {
-        document.getElementById("myDropdown1").classList.toggle("show");
-    }
-    window.onclick = function(e) {
-      if (!e.target.matches('.dropbtn')) {
-        var myDropdown = document.getElementById("myDropdown1");
-          if (myDropdown.classList.contains('show')) {
-            myDropdown.classList.remove('show');
-          }
-      }
-    }
-    </script>
-
-    <script>
-    function myFunction() {
-        document.getElementById("myDropdown2").classList.toggle("show");
-    }
-    window.onclick = function(e) {
-      if (!e.target.matches('.dropbtn')) {
-        var myDropdown = document.getElementById("myDropdown2");
-          if (myDropdown.classList.contains('show')) {
-            myDropdown.classList.remove('show');
-          }
-      }
-    }
-    </script>
-
-    <script>
-    function myFunction() {
-        document.getElementById("myDropdown3").classList.toggle("show");
-    }
-    window.onclick = function(e) {
-      if (!e.target.matches('.dropbtn')) {
-        var myDropdown = document.getElementById("myDropdown3");
-          if (myDropdown.classList.contains('show')) {
-            myDropdown.classList.remove('show');
-          }
-      }
-    }
-    </script>
-
-    <script>
-    function myFunction() {
-        document.getElementById("myDropdown4").classList.toggle("show");
-    }
-    window.onclick = function(e) {
-      if (!e.target.matches('.dropbtn')) {
-        var myDropdown = document.getElementById("myDropdown4");
-          if (myDropdown.classList.contains('show')) {
-            myDropdown.classList.remove('show');
-          }
-      }
-    }
-    </script>
-
+    
     <img src= alt= style=>
   </body>
 </html>
