--- a/snacks.html
+++ b/snacks.html
@@ -4,10 +4,16 @@
    <source src="styles.css" type="stylesheet">
      <body style="background-color:#F15025">
   <h1 id="Snack-Header">Snacks</h1>
-  <h2>Recipes</h2>
   <style>
-
+html{
+  color: white;
+}
+h1,
+h2{
+  text-align: center;
+}
   </style>
+  <h2>Recipes</h2>
  </head>
  <body>
  <p>
