--- a/about.html
+++ b/about.html
@@ -2,6 +2,15 @@
 <html>
   <head>
     <body style="background-color:#F15025">
+    <style>
+    html{
+      color: white;
+    }
+    h1,
+    h2{
+      text-align: center;
+    }
+      </style>
     <h1>About Us</h1>
   </head>
   <body>
