--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <body style="background-color:#F15025">
+      <link rel="stylesheet" href="styles.css">
     <style>
     html{
       color: white;
