--- a/index.html
+++ b/index.html
@@ -15,16 +15,14 @@
     <h2 align="center">Delicious recipes for everyone!</h2>
 
     <div class="container">
-      <a href="#home">Home</a>
-      <a href="#about">About</a>
-      <a href="#breakfast">Breakfast</a>
-      <a href="#lunch">Lunch</a>
-      <a href="#dinner">Dinner</a>
-      <a href="#baking">Baking</a>
-      <a href="#snacks">Snacks</a>
-      <a href="#contact">Contact</a>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="breakfast.html">Breakfast</a>
+      <a href="Lunch.html">Lunch</a>
+      <a href="dinner.html">Dinner</a>
+      <a href="snacks,html">Snacks</a>
     </div>
-    
+
     <img src= alt= style=>
   </body>
 </html>
