--- a/about.html
+++ b/about.html
@@ -20,6 +20,6 @@
   <p>
     <h3>The Amazing Creators</h3>
       <Strong>Name:<Strong>
-        <br><br><Strong>Name:<Strong>
+        <br><br><Strong>Name:<Strong> KMacnz
           <br><br><Strong>Name:<Strong>
 </html>
