--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a href="breakfast.html">Breakfast</a>
       <a href="Lunch.html">Lunch</a>
       <a href="dinner.html">Dinner</a>
-      <a href="snacks,html">Snacks</a>
+      <a href="snacks.html">Snacks</a>
     </div>
 
     <img src= alt= style=>
