Added in names, food background image and dinner.html

--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
-<html>
-<head>
-<title>Food Is Life</title>
-  <source src="styles.css" type="stylesheet">
-</head>
-<body>
-  <h1>Food Is Life</h1>
-<img src="" alt="">
-</body>
+<html id="index">
+  <head>
+    <link href='https://fonts.googleapis.com/css?family=Alfa+Slab+One' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Francois+One' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Kanit' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Hammersmith+One' rel='stylesheet'>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body style="background-color:#F15025">
+    <h1 align="center" id="home">Food Is Life</h1>
+    <h2 align="center">Delicious recipes for everyone!</h2>
+
+    <div class="container">
+      <a href="#index">Home</a>
+      <a href="#about">About</a>
+      <a href="#breakfast">Breakfast</a>
+      <a href="#lunch">Lunch</a>
+      <a href="#dinner">Dinner</a>
+      <a href="#baking">Baking</a>
+      <a href="#snacks">Snacks</a>
+      <a href="#contact">Contact</a>
+    </div>
+
+    <img src= alt= style=>
+  </body>
 </html>
