--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <a href="Lunch.html">Lunch</a>
       <a href="dinner.html">Dinner</a>
       <a href="snacks.html">Snacks</a>
+      <a href="test.html">Snacks</a>
     </div>
 
     <img src= alt= style=>
