--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body style="background-color:#F15025">
-    <h1 align="center" id="indexheading">Food Is Life</h1>
+    <h1 align="center">Food Is Life</h1>
     <h2 align="center">Delicious recipes for everyone!</h2>
 
     <div class="container">
