--- a/about.html
+++ b/about.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html>
+<div class="container">
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="breakfast.html">Breakfast</a>
+  <a href="Lunch.html">Lunch</a>
+  <a href="dinner.html">Dinner</a>
+  <a href="snacks.html">Snacks</a>
+</div>
   <head>
     <body style="background-color:#F15025">
       <link rel="stylesheet" href="styles.css">
