--- a/breakfast.html
+++ b/breakfast.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html id="breakfast">
+<div class="container">
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="breakfast.html">Breakfast</a>
+  <a href="Lunch.html">Lunch</a>
+  <a href="dinner.html">Dinner</a>
+  <a href="snacks.html">Snacks</a>
+</div>
 <head>
   <title>Breakfast</title>
   <link rel="stylesheet" href="styles.css">
