--- a/snacks.html
+++ b/snacks.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
+<div class="container">
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="breakfast.html">Breakfast</a>
+  <a href="Lunch.html">Lunch</a>
+  <a href="dinner.html">Dinner</a>
+  <a href="snacks.html">Snacks</a>
+</div>
  <head>
    <title>Snacks</title>
      <link rel="stylesheet" href="styles.css">
