--- a/breakfast.html
+++ b/breakfast.html
@@ -12,6 +12,12 @@
   <title>Breakfast</title>
   <link rel="stylesheet" href="styles.css">
     <body style="background-color:#F15025">
+    <style>
+    h1,
+    h2{
+      text-align: center;
+    }
+      </style>
 </head>
 <body>
  <h1>Breakfast</h1>
