--- a/snacks.html
+++ b/snacks.html
@@ -8,7 +8,7 @@
   <a href="snacks.html">Snacks</a>
 </div>
  <head>
-   <title>Snacks</title>
+   <title class="titles">Snacks</title>
      <link rel="stylesheet" href="styles.css">
      <body style="background-color:#F15025">
   <h1 id="Snack-Header">Snacks</h1>
