--- a/Lunch.html
+++ b/Lunch.html
@@ -9,7 +9,7 @@
   <a href="snacks.html">Snacks</a>
 </div>
 <head>
-  <title>Lunch</title>
+  <title class="titles">Lunch</title>
   <link rel="stylesheet" href="styles.css">
     <body style="background-color:#F15025"></body>
     <style>
