--- a/breakfast.html
+++ b/breakfast.html
@@ -9,7 +9,7 @@
   <a href="snacks.html">Snacks</a>
 </div>
 <head>
-  <title>Breakfast</title>
+  <title class="titles">Breakfast</title>
   <link rel="stylesheet" href="styles.css">
     <body style="background-color:#F15025">
     <style>
