--- a/breakfast.html
+++ b/breakfast.html
@@ -10,6 +10,7 @@
 </div>
 <head>
   <title class="titles">Breakfast</title>
+  <link href='https://fonts.googleapis.com/css?family=Alfa+Slab+One' rel='stylesheet'>
   <link rel="stylesheet" href="styles.css">
     <body style="background-color:#F15025">
     <style>
