added font links

--- a/dinner.html
+++ b/dinner.html
@@ -9,8 +9,8 @@
   <a href="snacks.html">Snacks</a>
 </div>
 <head>
+  <link href='https://fonts.googleapis.com/css?family=Alfa+Slab+One' rel='stylesheet'>
   <title class="titles">Dinner</title>
-<<<<<<< HEAD
   <source src="styles.css" type="stylesheet">
 =======
   <link rel="stylesheet" href="styles.css">
