added font links

--- a/Lunch.html
+++ b/Lunch.html
@@ -9,6 +9,7 @@
   <a href="snacks.html">Snacks</a>
 </div>
 <head>
+  <link href='https://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Alfa+Slab+One' rel='stylesheet'>
   <title class="titles">Lunch</title>
   <link rel="stylesheet" href="styles.css">
