--- a/snacks.html
+++ b/snacks.html
@@ -10,10 +10,7 @@
  <head>
    <link href='https://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet'>
    <link href='https://fonts.googleapis.com/css?family=Alfa+Slab+One' rel='stylesheet'>
-   <title class="titles">Snacks</title>
-     <link rel="stylesheet" href="styles.css">
-     <body style="background-color:#F15025">
-  <h1 id="Snack-Header">Snacks</h1>
+   <link rel="stylesheet" href="styles.css">
   <style>
 h1,
 h2{
@@ -21,7 +18,9 @@ text-align: center;
 }
 </style>
  </head>
- <body>
+ <body  style="background-color:#F15025">
+   <title class="titles">Snacks</title>
+   <h1>Snacks</h1>
    <h2> Recipes</h2>
    <p>
    <h3>Kiwi Dip</h3>
