--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
   <a href="snacks.html">Snacks</a>
 </div>
   <head>
+    <link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Alfa+Slab+One' rel='stylesheet'>
     <body style="background-color:#F15025">
