--- a/snacks.html
+++ b/snacks.html
@@ -8,6 +8,7 @@
   <a href="snacks.html">Snacks</a>
 </div>
  <head>
+   <link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet'>
    <link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet'>
    <link href='https://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet'>
    <link href='https://fonts.googleapis.com/css?family=Alfa+Slab+One' rel='stylesheet'>
