--- a/about.html
+++ b/about.html
@@ -30,8 +30,8 @@
    <p>This website is made for those who either don't know what to cook or even those who don't know how to cook. You can browse through recipes for any meal or any time of the day, whether it be breakfast, lunch, dinner or snacks. There are recipes for any skill level of cooks. </p>
   </body>
     <h3>The Amazing Creators</h3>
-      <Strong>Name:<Strong> Savage Pakeha
-        <br><br><Strong>Name:<Strong> KMacnz
-          <br><br><Strong>Name:<Strong> Jade Ross
+      <br><br><Strong>Name:<Strong> Savage Pakeha
+      <br><br><Strong>Name:<Strong> KMacnz
+      <br><br><Strong>Name:<Strong> Jade Ross
   <img src="teamwork.jpg" alt="Teamwork">
 </html>
