--- a/about.html
+++ b/about.html
@@ -23,6 +23,9 @@
     h2{
       text-align: center;
     }
+    img {
+      align: center;
+    }
       </style>
     <h1 class="titles">About Us</h1>
   </head>
@@ -33,5 +36,6 @@
       <br><br><Strong>Name:<Strong> Savage Pakeha
       <br><br><Strong>Name:<Strong> KMacnz
       <br><br><Strong>Name:<Strong> Jade Ross
+        
   <img src="teamwork.jpg" alt="Teamwork">
 </html>
