--- a/index.html
+++ b/index.html
@@ -1,12 +1,4 @@
 <!DOCTYPE html>
-<div class="container">
-  <a href="index.html">Home</a>
-  <a href="about.html">About</a>
-  <a href="breakfast.html">Breakfast</a>
-  <a href="Lunch.html">Lunch</a>
-  <a href="dinner.html">Dinner</a>
-  <a href="snacks.html">Snacks</a>
-</div>
 <html id="index">
   <head>
     <link href='https://fonts.googleapis.com/css?family=Alfa+Slab+One' rel='stylesheet'>
@@ -19,9 +11,19 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body style="background-color:#F15025">
-    <h1 align="center">Food Is Life</h1>
-    <h2 align="center">Delicious recipes for everyone!</h2>
 
-    <img src= alt= style=>
+    <div class='whiteContainer'>
+      <div class="container">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="breakfast.html">Breakfast</a>
+        <a href="Lunch.html">Lunch</a>
+        <a href="dinner.html">Dinner</a>
+        <a href="snacks.html">Snacks</a>
+      </div>
+      <h1 align="center">Food Is Life</h1>
+      <h2 align="center">Delicious recipes for everyone!</h2>
+
+    </div>
   </body>
 </html>
