--- a/Lunch.html
+++ b/Lunch.html
@@ -27,6 +27,7 @@
       </style>
 </head>
 <body>
+  <div class='whiteContainer longpage'>
  <h1>Lunch</h1>
  <h2>Recipes</h2>
  <p id= "Lunch-p">
@@ -118,5 +119,6 @@
    <br><strong>4.</strong> Cook over a medium heat for 2-3 minutes until bubbles appear on the surface of the batter. Turn and cook the other side for a further 2-3 minutes until fritters are golden and cooked through. It maybe necessary to add extra oil to the pan during cooking
  </ol>
 </p>
+</div>
 </body>
 </html>
