--- a/about.html
+++ b/about.html
@@ -27,13 +27,17 @@
       align: center;
     }
       </style>
-    <h1 class="titles">About Us</h1>
+
   </head>
   <body>
-   <p>This website is made for those who either don't know what to cook or even those who don't know how to cook. You can browse through recipes for any meal or any time of the day, whether it be breakfast, lunch, dinner or snacks. There are recipes for any skill level of cooks. </p>
+    <div class='whiteContainer'>
+      <h1>About Us</h1>
+      <h3>The Amazing Creators</h3>
+      <p>This website is made for those who either don't know what to cook or even those who don't know how to cook. You can browse through recipes for any meal or any time of the day, whether it be breakfast, lunch, dinner or snacks. There are recipes for any skill level of cooks. </p>
+      <br><br><Strong>Name:<Strong> Savage Pakeha
+      <br><br><Strong>Name:<Strong> KMacnz
+      <br><br><Strong>Name:<Strong> Jade Ross
+    </div>
   </body>
-    <h3>The Amazing Creators</h3>
-    <br><br><Strong>Name:<Strong> Savage Pakeha
-    <br><br><Strong>Name:<Strong> KMacnz
-    <br><br><Strong>Name:<Strong> Jade Ross
+
 </html>
