--- a/snacks.html
+++ b/snacks.html
@@ -21,6 +21,7 @@ text-align: center;
 </style>
  </head>
  <body  style="background-color:#F15025">
+   <div class='whiteContainer longpage'>
    <title class="titles">Snacks</title>
    <h1>Snacks</h1>
    <h2> Recipes</h2>
@@ -89,5 +90,5 @@ text-align: center;
    <br><strong>5.</strong> Bake the breads for 20 to 30 minutes or until tested with a skewer (they should be pale) leave to cool for 5 minutes in tins the transfer to cooling rack
  </ol>
 </p>
-
+</div>
 </body>
