--- a/dinner.html
+++ b/dinner.html
@@ -25,10 +25,12 @@
       </style>
 </head>
 <body>
+    <div class='whiteContainer longpage'>
  <h1>Dinner</h1>
  <h2>Recipes</h2>
+ <p>
  <h3> Classic Mac and Cheese</h3>
-   <li><img src="https://cdn-ap-cf.yottaa.net/57eaa34c2bb0ac1299000018/www.foodinaminute.co.nz/v~13.1b/var/fiam/storage/images/recipes/classic-mac-cheese/9545079-12-eng-US/Classic-Mac-Cheese_recipeimage.jpg?yocs=5_&yoloc=ap">
+   <img src="https://cdn-ap-cf.yottaa.net/57eaa34c2bb0ac1299000018/www.foodinaminute.co.nz/v~13.1b/var/fiam/storage/images/recipes/classic-mac-cheese/9545079-12-eng-US/Classic-Mac-Cheese_recipeimage.jpg?yocs=5_&yoloc=ap">
     <h4> Ingredients</h4>
     <ol>
       <br><strong>1.</strong> 225g Macaroni Elbows
@@ -42,7 +44,7 @@
 </p>
 <p>
   <h3> Spicy Chicken and Tomato Arrabiatta</h3>
-   <li><img src="https://cdn-ap-cf.yottaa.net/57eaa34c2bb0ac1299000018/www.foodinaminute.co.nz/v~13.1b/var/fiam/storage/images/recipes/spicy-chicken-and-tomato-arrabiatta/9545129-2-eng-US/Spicy-Chicken-and-Tomato-Arrabiatta_recipeimage.jpg?yocs=5_&yoloc=ap">
+   <img src="https://cdn-ap-cf.yottaa.net/57eaa34c2bb0ac1299000018/www.foodinaminute.co.nz/v~13.1b/var/fiam/storage/images/recipes/spicy-chicken-and-tomato-arrabiatta/9545129-2-eng-US/Spicy-Chicken-and-Tomato-Arrabiatta_recipeimage.jpg?yocs=5_&yoloc=ap">
     <h4> Ingredients</h3>
       <ol>
         <br><strong>1.</strong> 225g dried penne pasta
@@ -61,7 +63,7 @@
     </p>
     <p>
       <h3>Slow Cooked Indian Lamb and Chickpea Curry</h3>
-   <li><img src="https://cdn-ap-cf.yottaa.net/57eaa34c2bb0ac1299000018/www.foodinaminute.co.nz/v~13.1b/var/fiam/storage/images/recipes/slow-cooked-indian-lamb-and-chickpea-curry/9490349-6-eng-US/Slow-Cooked-Indian-Lamb-and-Chickpea-Curry_recipeimage.jpg?yocs=5_&yoloc=ap">
+   <img src="https://cdn-ap-cf.yottaa.net/57eaa34c2bb0ac1299000018/www.foodinaminute.co.nz/v~13.1b/var/fiam/storage/images/recipes/slow-cooked-indian-lamb-and-chickpea-curry/9490349-6-eng-US/Slow-Cooked-Indian-Lamb-and-Chickpea-Curry_recipeimage.jpg?yocs=5_&yoloc=ap">
     <h4> Ingredients</h4>
      <ol>
        <br><strong>1.</strong> 600g lamb leg steaks, chopped
@@ -80,7 +82,7 @@
  </p>
  <p>
    <h3>Mexican-Style Barbecued Corn</h3>
-    <li><img src="https://cdn-ap-cf.yottaa.net/57eaa34c2bb0ac1299000018/www.foodinaminute.co.nz/v~13.1b/var/fiam/storage/images/recipes/mexican-style-barbecued-corn/8718214-5-eng-US/Mexican-Style-Barbecued-Corn_recipeimage.jpg?yocs=5_&yoloc=ap">
+    <img src="https://cdn-ap-cf.yottaa.net/57eaa34c2bb0ac1299000018/www.foodinaminute.co.nz/v~13.1b/var/fiam/storage/images/recipes/mexican-style-barbecued-corn/8718214-5-eng-US/Mexican-Style-Barbecued-Corn_recipeimage.jpg?yocs=5_&yoloc=ap">
      <h4>Ingredients</h4>
        <ol>
          <br><strong>1.</strong> 8 cobs corn, husks on
@@ -98,7 +100,7 @@
      </p>
      <p>
     <h3>Fresh Tomato Shrimp Pasta</h3>
-      <li><img src="http://images.media-allrecipes.com/userphotos/720x405/627501.jpg">
+      <img src="http://images.media-allrecipes.com/userphotos/720x405/627501.jpg">
         <h4>Ingredients</h4>
           <ol>
             <br><strong>1.</strong> 8 ounces dry fettuccine pasta
@@ -119,5 +121,6 @@
         </ol>
       </p>
   </ul>
+</div>
 </body>
 </html>
