--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href='https://fonts.googleapis.com/css?family=Hammersmith+One' rel='stylesheet'>
     <link rel="stylesheet" href="styles.css">
   </head>
-  <body style="background-color:#F15025">
+  <body>
 
     <div class='whiteContainer'>
       <div class="container">
