--- a/breakfast.html
+++ b/breakfast.html
@@ -76,7 +76,7 @@
   </p>
   <p>
     <h3>Peach Pancakes</h3>
-    <li><img src="https://cdn-ap-cf.yottaa.net/57eaa34c2bb0ac1299000018/www.foodinaminute.co.nz/v~13.1b/var/fiam/storage/images/recipes/peach-pancakes/7984780-7-eng-US/Peach-Pancakes_recipeimage.jpg?yocs=5_&yoloc=ap">
+    <li><img src="https://cdn-ap-cf.yottaa.net/57eaa34c2bb0ac1299000018/www.foodinaminute.co.nz/v~13.1b/var/fiam/storage/images/recipes/peach-pancakes/7984780-7-eng-US/Peach-Pancakes_recipeimage.jpg?yocs=5_&yoloc=ap" width="450">
      <h4> Ingredients</h4>
       <ol>
        <br><strong>1.</strong> 1½ cups flour
@@ -96,7 +96,7 @@
   </p>
   <p>
     <h3>Spaghetti and Egg Pies</h3>
-    <li><img src="https://cdn-ap-cf.yottaa.net/57eaa34c2bb0ac1299000018/www.foodinaminute.co.nz/v~13.1b/var/fiam/storage/images/recipes/spaghetti-and-egg-pies/5944346-14-eng-US/Spaghetti-and-Egg-Pies_recipeimage.jpg?yocs=5_&yoloc=ap">
+    <li><img src="https://cdn-ap-cf.yottaa.net/57eaa34c2bb0ac1299000018/www.foodinaminute.co.nz/v~13.1b/var/fiam/storage/images/recipes/spaghetti-and-egg-pies/5944346-14-eng-US/Spaghetti-and-Egg-Pies_recipeimage.jpg?yocs=5_&yoloc=ap" width="450">
       <h4>Ingredients</h4>
       <ol>
         <br><strong>1.</strong> 3 sheets frozen flaky puff pastry
