--- a/dinner.html
+++ b/dinner.html
@@ -28,7 +28,7 @@
  <h1>Dinner</h1>
  <h2>Recipes</h2>
  <h3> Classic Mac and Cheese</h3>
-   <li><img src="https://cdn-ap-cf.yottaa.net/57eaa34c2bb0ac1299000018/www.foodinaminute.co.nz/v~13.1b/var/fiam/storage/images/recipes/classic-mac-cheese/9545079-12-eng-US/Classic-Mac-Cheese_recipeimage.jpg?yocs=5_&yoloc=ap">
+   <li><img src="https://cdn-ap-cf.yottaa.net/57eaa34c2bb0ac1299000018/www.foodinaminute.co.nz/v~13.1b/var/fiam/storage/images/recipes/classic-mac-cheese/9545079-12-eng-US/Classic-Mac-Cheese_recipeimage.jpg?yocs=5_&yoloc=ap" width="450">
     <h4> Ingredients</h4>
     <ol>
       <br><strong>1.</strong> 225g Macaroni Elbows
@@ -42,7 +42,7 @@
 </p>
 <p>
   <h3> Spicy Chicken and Tomato Arrabiatta</h3>
-   <li><img src="https://cdn-ap-cf.yottaa.net/57eaa34c2bb0ac1299000018/www.foodinaminute.co.nz/v~13.1b/var/fiam/storage/images/recipes/spicy-chicken-and-tomato-arrabiatta/9545129-2-eng-US/Spicy-Chicken-and-Tomato-Arrabiatta_recipeimage.jpg?yocs=5_&yoloc=ap">
+   <li><img src="https://cdn-ap-cf.yottaa.net/57eaa34c2bb0ac1299000018/www.foodinaminute.co.nz/v~13.1b/var/fiam/storage/images/recipes/spicy-chicken-and-tomato-arrabiatta/9545129-2-eng-US/Spicy-Chicken-and-Tomato-Arrabiatta_recipeimage.jpg?yocs=5_&yoloc=ap" width="450">
     <h4> Ingredients</h3>
       <ol>
         <br><strong>1.</strong> 225g dried penne pasta
@@ -61,7 +61,7 @@
     </p>
     <p>
       <h3>Slow Cooked Indian Lamb and Chickpea Curry</h3>
-   <li><img src="https://cdn-ap-cf.yottaa.net/57eaa34c2bb0ac1299000018/www.foodinaminute.co.nz/v~13.1b/var/fiam/storage/images/recipes/slow-cooked-indian-lamb-and-chickpea-curry/9490349-6-eng-US/Slow-Cooked-Indian-Lamb-and-Chickpea-Curry_recipeimage.jpg?yocs=5_&yoloc=ap">
+   <li><img src="https://cdn-ap-cf.yottaa.net/57eaa34c2bb0ac1299000018/www.foodinaminute.co.nz/v~13.1b/var/fiam/storage/images/recipes/slow-cooked-indian-lamb-and-chickpea-curry/9490349-6-eng-US/Slow-Cooked-Indian-Lamb-and-Chickpea-Curry_recipeimage.jpg?yocs=5_&yoloc=ap" width="450">
     <h4> Ingredients</h4>
      <ol>
        <br><strong>1.</strong> 600g lamb leg steaks, chopped
@@ -80,7 +80,7 @@
  </p>
  <p>
    <h3>Mexican-Style Barbecued Corn</h3>
-    <li><img src="https://cdn-ap-cf.yottaa.net/57eaa34c2bb0ac1299000018/www.foodinaminute.co.nz/v~13.1b/var/fiam/storage/images/recipes/mexican-style-barbecued-corn/8718214-5-eng-US/Mexican-Style-Barbecued-Corn_recipeimage.jpg?yocs=5_&yoloc=ap">
+    <li><img src="https://cdn-ap-cf.yottaa.net/57eaa34c2bb0ac1299000018/www.foodinaminute.co.nz/v~13.1b/var/fiam/storage/images/recipes/mexican-style-barbecued-corn/8718214-5-eng-US/Mexican-Style-Barbecued-Corn_recipeimage.jpg?yocs=5_&yoloc=ap" width="450">
      <h4>Ingredients</h4>
        <ol>
          <br><strong>1.</strong> 8 cobs corn, husks on
@@ -98,7 +98,7 @@
      </p>
      <p>
     <h3>Fresh Tomato Shrimp Pasta</h3>
-      <li><img src="http://images.media-allrecipes.com/userphotos/720x405/627501.jpg">
+      <li><img src="http://images.media-allrecipes.com/userphotos/720x405/627501.jpg" width="450">
         <h4>Ingredients</h4>
           <ol>
             <br><strong>1.</strong> 8 ounces dry fettuccine pasta
