--- a/dinner.html
+++ b/dinner.html
@@ -100,7 +100,7 @@
      </p>
      <p>
     <h3>Fresh Tomato Shrimp Pasta</h3>
-      <img src="http://images.media-allrecipes.com/userphotos/720x405/627501.jpg">
+      <img src="http://images.media-allrecipes.com/userphotos/720x405/627501.jpg" width="450">
         <h4>Ingredients</h4>
           <ol>
             <br><strong>1.</strong> 8 ounces dry fettuccine pasta
