--- a/breakfast.html
+++ b/breakfast.html
@@ -23,6 +23,7 @@
       </style>
 </head>
 <body style="background-color:#F15025">
+  <div class='whiteContainer longpage'>
  <h1>Breakfast</h1>
  <h2>Recipes</h2>
  <p>
