--- a/dinner.html
+++ b/dinner.html
@@ -24,6 +24,7 @@
     }
       </style>
 </head>
+<div class='whiteContainer longpage'>
 <body>
  <h1>Dinner</h1>
  <h2>Recipes</h2>
@@ -119,5 +120,6 @@
         </ol>
       </p>
   </ul>
+</div>
 </body>
 </html>
